--- a/sticky-footer-style.css
+++ b/sticky-footer-style.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  max-height: 100vh;
+  min-height: 100vh;
 }
 
 main {
@@ -20,7 +20,7 @@ header {
 }
 
 main {
-  margin: auto;
+  margin: 0 auto;
   max-width: 30ch;
 
   border: 1px solid green;
